test/fail/asyncret3.as
shared func call4<B <: Shared>(f : shared () -> async B) : async B = f() ;

